# safe-send

./: README.md
main/: .env  Cargo.toml
main/src/: lib.rs  main.rs
main/src/auth/handler/: log_in.rs  mod.rs  sign_up.rs
main/src/auth/handler/handle_insert/: login_handle_insert.rs  mod.rs  signup_handle_insert.rs
main/src/auth/utils/: create_jwt.rs  helper.rs  mod.rs  verify_email.rs
safesend/: index.html  package-lock.json  package.json
safesend/src/: App.css  App.tsx  Home.tsx  main.tsx
safesend/src-tauri/: .env  Cargo.toml  tauri.conf.json
safesend/src-tauri/capabilities/: default.json
safesend/src-tauri/icons/: icon.icns
safesend/src-tauri/src/: lib.rs  main.rs
safesend/src-tauri/src/api/: auth_api_login.rs  auth_api_signup.rs  auth_api_verify_email.rs  mod.rs
safesend/src/auth/: Emailcodeverify.tsx  Login.tsx  Main.tsx  Signup.tsx
safesend/src/auth/css/: EmailVerify.module.css  login.module.css  main.module.css  signup.module.css
safesend/src/components/: Bottom.tsx  Header.tsx  Loading.tsx
safesend/src/components/css/: Bottom.module.css  Loading.module.css  header.module.css
safesend/src/lib/: Call.ts
safesend/src/tools/: Chat.tsx  Genqr.tsx  Vault.tsx
safesend/src/tools/main conatant/: ChatContant.tsx  GenqrContant.tsx  VaultContant.tsx
sql/: index.sql
