[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
tokio-postgres = "0.7.13"
validator = {version ="0.20.0",features = ["derive"]}
bcrypt = "0.17.0"   
local-ip-address = "0.6.1"
tower-http = { version = "0.5.0", features = ["cors"] }
resend-rs = "0.15.0"
regex = "1.11.1"
rand = "0.9.1"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"]  }
redis = {version="0.32.0", features = ["tokio-comp"]  }
axum-msgpack = "0.5.0"
lazy_static = "1.4"